--- a/log-tests.html
+++ b/log-tests.html
@@ -9,3 +9,7 @@ Avaliador (Alura\Leilao\Tests\Service\Avaliador)
  [x] Avaliador buscar 3 maiores lances with data set "ordem-decrescente"
  [x] Avaliador buscar 3 maiores lances with data set "ordem-aleatoria"
 
+Leilao (Alura\Leilao\Tests\Model\Leilao)
+ [x] Leilao deve receber lances with data set "2-Lances"
+ [x] Leilao deve receber lances with data set "1-Lance"
+
